# spinnaker_sdk_camera_driver

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  download_and_install_spinnaker.sh  nodelet_plugins.xml  package.xml
.github/ISSUE_TEMPLATE/: bug_report.md
cfg/: debug_console.conf  spinnaker_cam.cfg
cmake/: FindLibUnwind.cmake  FindSpinnaker.cmake
examples/: subscriber_nodelet.cpp
include/: capture.h
include/spinnaker_sdk_camera_driver/: camera.h  capture.h  capture_nodelet.h  serialization.h  spinnaker_configure.h.in  std_include.h  utils.h
launch/: acquisition.launch  acquisition_external_trigger.launch  acquisition_node.launch  acquisition_nodelet.launch  multiple_nodelet_example.launch  node_acquisition.launch  nodelet_subscriber_example.launch  nodelet_test.launch
msg/: SpinnakerImageInfo.msg
params/: cam_17197553.yaml  cam_17197558.yaml  camera.yaml  external_trigger_params.yaml  multi-cam_example.yaml  stereo_camera_example.yaml  test_params.yaml
params/calibration_files/: stereo_17197554_17197553.yaml  stereo_17197555_17197558.yaml  stereo_17197556_17197557.yaml  stereo_17197560_17197550.yaml
src/: acquisition_node.cpp  camera.cpp  capture.cpp  capture_nodelet.cpp  nodelet_test.cpp  notes.txt  utils.cpp  validator.cpp
