<?xml version="1.0"?>
<package>
  <name>spinnaker_camera_driver</name>
  <version>0.0.0</version>
  <description>Point Grey (FLIR) Spinnaker based camera driver (Blackfly S etc.)
</description>

  <maintainer email="vikrantshah+ros@gmail.com">Vikrant Shah</maintainer>

  <author>Abhishek Bajpayee</author>
  <author>Pushyami Kaveti</author>
  <author>Vikrant Shah</author>
  
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/spinnaker_camera_driver</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
